-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.14.0-beta2
-
None
-
-
8f4be88eeaf2a61ff47848827daaff318f430f5d (qt-creator/qt-creator/4.14)
When using code analyzer during editing and execute analysis under debug, then
- the anotation in the editor window is duplicated,
- there are two warning singns, and
- the tooltip over the warning sign show the same message twice.
Reproduce:
Use the wizard to create a new qt console application.
Way for the analysis warning on the a.exec() line.
Here without analysis run in debugger:
And now after "analyze current file":
same with tooltips:
The duplication in the tooltip is probably the consequence of the duplication in the warning signs on the border...
For Gerrit Dashboard: QTCREATORBUG-24955 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
323243,2 | ClangTools: prevent creating duplicated diagnostic marks | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |